--- a/TicTacToe_Forms/TicTacToe_Forms/GamePage.xaml
+++ b/TicTacToe_Forms/TicTacToe_Forms/GamePage.xaml
@@ -15,7 +15,7 @@
                 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="120"/>
-                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="*"/>
                     <RowDefinition Height="120"/>
                     <RowDefinition Height="120"/>
                     <RowDefinition Height="120"/>
@@ -23,7 +23,7 @@
                     <RowDefinition Height="120"/>
                 </Grid.RowDefinitions >
                 
-                <Frame x:Name="FrameO" Grid.Row="0" Grid.Column="0" BackgroundColor="#61D89F" Grid.ColumnSpan="3" CornerRadius="5" >
+                <Frame Margin="0, 0, 0, 20" x:Name="FrameO" Grid.Row="0" Grid.Column="0" BackgroundColor="#61D89F" Grid.ColumnSpan="3" CornerRadius="5" >
                     <Label Text="Player O" FontSize="50" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" Rotation="180"/>
                 </Frame>
                 
