--- a/TicTacToe_Forms/TicTacToe_Forms/MainPage.xaml
+++ b/TicTacToe_Forms/TicTacToe_Forms/MainPage.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:TicTacToe_Forms"
              x:Class="TicTacToe_Forms.MainPage">
     <AbsoluteLayout BackgroundColor="#FF9773" >
-        <Button Text="START GAME" FontSize="50" BackgroundColor="#61D89F" Clicked="Button_OnClicked" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.5, 0.5" CornerRadius="5"/>
+        <Button BorderColor="Black" Text="START GAME" FontSize="50" BackgroundColor="#61D89F" Clicked="Button_OnClicked" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.5, 0.5" CornerRadius="5"/>
         <!--<StackLayout VerticalOptions="FillAndExpand" Margin="10" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.5, 0.5">
             <Grid x:Name = "Grid1" VerticalOptions="CenterAndExpand" Margin="10" >
                 <Grid.ColumnDefinitions>
